CR-2006-12-22-0: Bugfix:    o fixed bug for compiling:
                              do aimk depend before clean when testsuite did
                              cvs update

JG-2006-12-21-2: Bugfix:    qmake test failed when test hosts had significantly
                            different speed.
                            system_tests/windows/gui failed in clusters without
                            windows host
                            fixed unstable system_tests/qmaster/reporting

JG-2006-12-21-1: Bugfix:    Fixed qsub check_option_ac test. Cleanup.

RH-2006-12-21-0: Enhancem.: First version of hedeby checktree using
                            the new installer.

JG-2006-12-21-0: Cleanup:   Removed global variables,
                            and set_error from hedeby testsuite.
                            Minor fixes.

CR-2006-12-21-0: Enhancem.: o new test for IZ 2128

CR-2006-12-18-0: Bugfix:    o fixed bug for compiling
                            o added new procedure is_remote_path()

RD-2006-12-18-0: Cleanup:   Changed resource quota expanded list format
                 Review:    JG

RD-2006-12-15-0: Enhancem:  Added test for resource quota xattr qmaster crash
                 Review:    JG 

JG-2006-12-15-1: Bugfix:    system_tests/clients/common/setup failed on SGE 6.0.

JG-2006-12-15-0: Enhancem.: Added check system_tests/clients/common/setup 
                            testing behaviour of clients
                            - when there is no bootstrap file
                            - when there is no act_qmaster file
                            - when qmaster is down
                 Review:    AA


RH-2006-12-14-0: Enhancem.: Initial version of hedeby checktree added

JG-2006-12-13-0: Enhancem.: Added script to find deprecated globals / procedure 
                            calls.
                 Cleanup:   Removed deprecated globals from dtrace test.
                 Review:    RD
