@@ -76,9 +76,6 @@ lappend generic_module_tests "test_cull_pack"
 lappend generic_module_tests "test_enumeration"
 lappend generic_module_tests "test_sge_calendar"
 lappend generic_module_tests "test_sge_object"
-lappend generic_module_tests "test_resource_utilization"
-lappend generic_module_tests "test_ff_cl"
-lappend generic_module_tests "test_sge_resource_quota"
 
 proc generic_module_tests_init_level {} {
    global ts_config
