@@ -127,7 +127,7 @@ proc get_rqs_error {result rqs raise_error} {
 
    # recognize certain error messages and return special return code
    set messages(index) "-1"
-   set messages(-1) [translate_macro MSG_NOLIRSFOUND]
+   set messages(-1) [translate_macro MSG_NORQSFOUND]
 
    # now evaluate return code and raise errors
    set ret [handle_sge_errors "get_rqs" "qconf -srqs $rqs" $result messages $raise_error]
@@ -184,7 +184,8 @@ proc add_rqs {change_array {fast_add 1} {on_host ""} {as_user ""} {raise_error 1
       set tmpfile [dump_rqs_array_to_tmpfile chgar]
       set result [start_sge_bin "qconf" "-Arqs $tmpfile" $on_host $as_user ]
 
-      set messages(index) "-1 0"
+      set messages(index) "-2 -1 0"
+      set messages(-2) [translate_macro MSG_UNKNOWNATTRIBUTENAME_S "*"]
       set messages(-1) [translate_macro MSG_SGETEXT_ALREADYEXISTS_SS "resource quota set" "*"]
       set messages(0)  [translate_macro MSG_SGETEXT_ADDEDTOLIST_SSSS $CHECK_USER "*" "*" "resource quota set"]
 
@@ -195,10 +196,11 @@ proc add_rqs {change_array {fast_add 1} {on_host ""} {as_user ""} {raise_error 1
       # JG: TODO: object name is taken from c_gdi object structure - not I18Ned!!
       set ADDED [translate $ts_config(master_host) 1 0 0 [sge_macro MSG_SGETEXT_ADDEDTOLIST_SSSS] $CHECK_USER "*" "*" "resource quota set"]
       set ALREADY_EXISTS [ translate $ts_config(master_host) 1 0 0 [sge_macro MSG_SGETEXT_ALREADYEXISTS_SS] "resource quota set" "*"]
+      set UNKNOWN_ATTRIBUTE [ translate $ts_config(master_host) 1 0 0 [sge_macro MSG_UNKNOWNATTRIBUTENAME_S] "*"]
 
       set vi_commands [build_rqs_vi_array chgar]
 
-      set result [handle_vi_edit "$ts_config(product_root)/bin/$CHECK_ARCH/qconf" "-arqs $rqs_names" $vi_commands $ADDED $ALREADY_EXISTS]
+      set result [handle_vi_edit "$ts_config(product_root)/bin/$CHECK_ARCH/qconf" "-arqs $rqs_names" $vi_commands $ADDED $ALREADY_EXISTS $UNKNOWN_ATTRIBUTE]
       if { $result != 0 } {
          add_proc_error "add_rqs" -1 "could not add resource quota set (error: $result)" $raise_error
       }
