@@ -1,3 +1,11 @@
+RD-2006-12-22-0: Enhancem:  Added some tests for fixed issues:
+                            - qconf -Arqs added invalid RQS
+                            - RQS breaks scheduler behaviour
+                            - load_formula does not recognize float weighting
+                              factors
+                            - test for enhanced load_formula dynamic limit RQS
+                              syntax
+
 CR-2006-12-22-0: Bugfix:    o fixed bug for compiling:
                               do aimk depend before clean when testsuite did
                               cvs update
